# tfg_go2_arm

./: .gitignore  README.md
d1_550_config/: .setup_assistant  CMakeLists.txt  package.xml
d1_550_config/config/: d1_550_description.ros2_control.xacro  d1_550_description.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
d1_550_config/include/d1_550_mtc/: constants.h  pick_and_place.h
d1_550_config/launch/: d1_550_demo.launch.py  main_demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  pick_and_place.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
d1_550_config/src/: main.cpp  pick_and_place.cpp
d1_550_config/src/tasks/: pick_and_place.cpp
d1_550_config/srv/: PickAndPlaceObject.srv  PickObject.srv  PlaceObject.srv
d1_550_description/: CMakeLists.txt
d1_550_description/urdf/: d1_550_description.urdf
src/d1_550/d1_550_config/: .setup_assistant  CMakeLists.txt  package.xml
src/d1_550/d1_550_config/config/: moveit_controllers.yaml
src/d1_550/d1_550_config/launch/: d1_550_demo.launch.py  demo.launch.py  mtc.rviz
src/d1_550/d1_550_description/: CMakeLists.txt  package.xml
