<package format="2">
  <name>d1_550_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for d1_550_description</p>
    <p>This package contains configuration data, 3D models and launch files
for d1_550_description robot</p>
  </description>
  <author>sofi</author>
  <maintainer email="sofia.abal.freire@udc.es" />
  <license>BSD</license>
  <!--><buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <!-- Añadido -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!--><architecture_independent /> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>